Update stopwatch .html

--- a/stopwatch .html
+++ b/stopwatch .html
@@ -85,6 +85,8 @@
             background: #e0a800;
         }
     </style>
+    <meta name="google-site-verification" content="NfAhlVuk5YZQUz7bvNK1LNMAS8v1m7w1ScLJRXni-JU" />
+    
 </head>
 <body>
 
